column header misalignmnet fixed

--- a/resources/css/custom.data-table.css
+++ b/resources/css/custom.data-table.css
@@ -1,22 +1,18 @@
-#myTable_wrapper > .row{
-    margin: 0;
-}
-
 #btn-add-record{
     background-color: white;
     height: 32px;
     text-align: right;
-    border: 2px solid #022658;
+    border: 2px solid #0d6efd;
     border-radius: 10px;
     font-size: 1.2rem;
     padding: 0 20px;
     margin-top: 20px;
-    color: #022658;
+    color: #0d6efd;
     font-weight: 500;
 }
 
 #btn-add-record:hover{
-    background-color: #022658;
+    background-color: #0d6efd;
     color: white;
 }
 
@@ -36,24 +32,20 @@
     width: 100%;
 }
 
-.dt-center{
-    text-align: center;
-}
-
 .dt-scroll-headInner, .table{
     width: 100% !important;
+
 }
 
  table > thead > tr  th{
     background-color: #F8F9FA !important;
-
- }
+    padding-left: 5px !important;
+    padding-right: 5px !important;
+}
 
  #myTable_wrapper{
     margin-top: 20px;
-    margin-left: 19px;
     background-color: white;
-    width: 98%;
-    border-radius: 10px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px !important;
+    padding: 12px;
 }
